assets/css/style.css
/* Font styles */
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap");

/* Global styles */
body {
  font-family: "Quicksand", sans-serif;
  scroll-padding-top: 80px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Nunito", sans-serif;
}
/* Important rule to override bootstrap headings */
h2 {
  font-weight: 400 !important;
}
h2,
h3 {
  color: #b34bda;
}
.section {
  min-height: 700px;
}

/*Navigation*/

#navbar {
  background-color: #201631;
  padding: 0 0;
  border-bottom: 1px solid #c29e29;
}
/* Makes navbar not cover parts of the section */
#header,
#importance,
#improve,
#helping-others,
#contact {
  scroll-margin-top: 80px;
}

/* Navigation links */

.navbar-nav .nav-link {
  color: #c29e29;
  font-weight: 650;
  margin-left: 1.25rem;
  margin-right: 1.25rem;
  font-family: "Nunito", sans-serif;
  font-size: 1.3rem;
}

.navbar-nav .nav-link:hover {
  color: #c29e29;
  opacity: 0.8;
}
.navbar-nav .nav-link.active {
  color: #b34bda;
}
/* Navbar Burger */
.navbar-toggler {
  border: none;
}
.navbar-toggler-icon {
  filter: invert(1);
}

/* Logo */

.logo {
  width: 60px;
  height: auto;
}

/* Header */
#header {
  background-color: #201631;
  color: white;
  padding: 0px;
  min-height: 600px;
}
#header h1 {
  color: #c29e29;
}
/* Style line under header */
#header hr {
  height: 1px;
  background-color: #c29e29;
  border: none;
  opacity: 1;
}
/* Icons */
.fa-house {
  padding-right: 3px;
}
.fa-circle-exclamation {
  color: #c29e29;
  padding-left: 0.6em;
}
.fa-seedling {
  padding-left: 0.6em;
  color: #c29e29;
}
.fa-handshake {
  padding-left: 0.3em;
  padding-right: 0.1em;
}
.fa-hand-holding-heart {
  padding-left: 0.3em;
  padding-right: 0.1em;
}
.fa-heart {
  padding-left: 0.3em;
  padding-right: 0.1em;
}
.fa-comments {
  padding-left: 0.3em;
  padding-right: 0.1em;
}
.helping-icons {
  color: #b34bda;
}
/* Hero text */
.hero-text {
  padding: 2rem;
  font-size: large;
}
/* Hero image */
.hero {
  width: 100%;
  max-width: 100%;
  height: 400px;
  display: block;
  border: 1px solid #c29e29;
  border-radius: 30px;
}
/* Importance section */
#importance {
  background-color: #201631;
  min-height: 650px;
  padding: 4rem 0;
}

#importance .row {
  display: flex;
  flex-direction: row-reverse;
}
/* Style line under header */
#importance hr {
  height: 1px;
  background-color: #c29e29;
  border: none;
  opacity: 1;
}
#importance p {
  color: white;
  font-size: 20px;
}
#importance .hero-text {
  padding-top: 0;
}
/* Importance list */
.importance-list {
  color: white;
  font-size: 18px;
}
/* Importance image */
.importance-image {
  width: 100%;
  max-width: 550px;
  height: 170px;
  object-fit: cover;
  border: 1px solid #c29e29;
  border-radius: 15px;
  margin-bottom: 1.5rem;
}

/* Improve mental health section */
#improve {
  background-color: #201631;
  padding: 4rem 0;
}
#improve hr {
  height: 1px;
  background-color: #c29e29;
  border: none;
  opacity: 1;
}
/* Cards */
.card {
  background-color: #2b1e3a;
  border: 1px solid #c4a029;
  border-radius: 15px;
  color: white;
  font-size: 18px;
}

.card-title {
  color: #b34bda;
  font-weight: 700;
  border-bottom: 1px solid #c4a029;
  margin: 1px 0px;
  padding-bottom: 12px;
  text-align: center;
}

.card-text {
  color: #e5e5e5;
  padding: 5px 5px;
}

.card-img-top {
  height: 220px;
  object-fit: cover;
  width: 100%;
}
/* Helping others section */
#helping-others {
  background-color: #201631;
  color: white;
  min-height: 700px;
  padding-top: 6rem;
  font-size: 20px;
}

#helping-others h3 {
  text-align: start;
  color: #c29e29;
  padding-top: 10px;
}
/* Style line under header */
#helping-others hr {
  height: 1px;
  background-color: #c29e29;
  border: none;
  opacity: 1;
}
/* Contact details */

#contact {
  background-color: #201631;
  color: white;
  font-size: 18px;
  padding-top: 2rem;
  padding-bottom: 6rem;
}
/* Contact boxes */
.social-box {
  display: inline-block;
  background-color: #c29e29;
  color: #201631;
  padding: 0.7rem 1rem;
  border-radius: 8px;
  font-family: "Nunito", sans-serif;
  font-weight: 700;
  margin-top: 0.7rem;
  opacity: 0.9;
}
.social-box:hover {
  opacity: 0.7;
}

/* Style line under header */
#contact hr {
  height: 1px;
  background-color: #c29e29;
  border: none;
  opacity: 1;
}
/* Media queries */

/* Medium size screens*/
@media (max-width: 991px) {
  #navbar .container-fluid {
    flex-wrap: wrap;
  }

  #navbar .navbar-nav {
    width: 100%;
    justify-content: center;
    margin-left: 0;
    gap: 0.75rem;
  }
  .hero {
    margin-bottom: 2rem;
  }
  .importance-image {
    margin-left: auto;
    margin-right: auto;
    display: block;
  }
  #importance h3 {
    text-align: center;
  }
  .importance-list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 8px;
    text-align: left;
    padding-left: 2rem;
  }
}

/* mobile devices */
@media (max-width: 768px) {
  #header {
    padding: 1rem 0;
  }
  .hero-text {
    padding: 1.5rem;
    text-align: center;
  }

  .hero {
    margin-top: 2rem;
  }
  /* Make navbar not obstruct section content on tablet view when choosing navigation link */
  #improve {
    scroll-margin-top: 120px;
    padding-top: 3rem;
  }
  #helping-others {
    padding-top: 3rem;
  }
}

